--- a/src/app/first/first.component.html
+++ b/src/app/first/first.component.html
@@ -1,2 +1,7 @@
 <p>first works!</p>
 <h1>Iraklis kodebi</h1>
+<p>
+  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis, nemo id ab
+  optio voluptate nihil? Necessitatibus, porro? Nulla, quasi. Eveniet possimus
+  laudantium odio alias iure similique inventore harum tempore voluptatem.
+</p>
